# whisper-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  run.sh  schemas.py  service.py  transcriber.py  watchdog.py
